--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
         <div class="container__plot">
             <div class="result" style="display: flex;">
                 <div class="soc">
-                    <h4>Max SOC:<span>100%</span></h4> 
-                    <h4>Min SOC:<span>10%</span></h4> 
-                </div>  
+                    <h4>Max SOC:<span class="max_soc">100%</span></h4>
+                    <h4>Min SOC:<span class="min_soc">10%</span></h4>
+                </div>
                 <div class="work">
                     <h4>Working:<span>24h</span></h4>
                     <h4>Charging:<span>24h</span></h4>
@@ -29,7 +29,7 @@
                 <canvas id="myChart" width="670" height="240"></canvas>
             </div>
             <div class="plot_trande">
-                <!-- <canvas id="myChart" width="670" height="240"></canvas> -->
+                <canvas id="myChartWeek" width="670" height="240"></canvas>
             </div>
         </div>
         <div class="container__calc">
@@ -97,11 +97,13 @@
                         <span>A</span>
                     </label>
                 </div>
-                
+
                 <div class="stop_time">
                     <div class="break_info">
                         <h3 class="breaks">Breaks</h3>
-                        <div class="info_block"><img class="info_item" data-tooltip="Breaks in work time </br> описание блока" src="img/info.svg" alt="i"></div>
+                        <div class="info_block"><img class="info_item"
+                                data-tooltip="Breaks in work time </br> описание блока" src="img/info.svg" alt="i">
+                        </div>
                     </div>
                     <div id="tooltip"></div>
                     <div class="block_row">
@@ -126,4 +128,5 @@
     <script src="js/script.js"></script>
 </body>
 <!-- https://realadmin.ru/coding/jquery-hint.html -->
+
 </html>
