add update plot

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,10 @@
                 </div>
             </div>
             <div class="plot_day">
-                <canvas id="myChart" width="670" height="240"></canvas>
+                <div class="containerPlot">
+                    <canvas id="myChart" width="670" height="240"></canvas>
+                </div>
+                
             </div>
             <div class="plot_trande">
                 <canvas id="myChartWeek" width="670" height="240"></canvas>
