--- a/src/index.html
+++ b/src/index.html
@@ -14,91 +14,70 @@
 
 <body>
     <div class="container">
-        <div class="container__plot">
-            <div class="result" style="display: flex;">
-                <div class="soc">
-                    <h4>Max SOC:<span class="max_soc">100%</span></h4>
-                    <h4>Min SOC:<span class="min_soc">10%</span></h4>
-                </div>
-                <div class="work">
-                    <h4>Working:<span class="working">24h</span></h4>
-                    <h4>Charging:<span class="charging">24h</span></h4>
-                </div>
-            </div>
-            <div class="plot_day">
-                <div class="containerPlot">
-                    <canvas id="myChart" width="670" height="240"></canvas>
-                </div>
-                
-            </div>
-            <div class="plot_trande">
-                <canvas id="myChartWeek" width="670" height="240"></canvas>
-            </div>
-        </div>
         <div class="container__calc">
             <form class="calc" name="calculator">
                 <div class="battery_stat">
                     <h3>Battery</h3>
-                    <label>
-                        <h4>Voltage</h4>
-                        <select class="battery_voltage" name="battery_volt"
-                            onchange="document.calculator.battery_en.value = eval(document.calculator.battery_volt.value * document.calculator.battery_cap.value / 1000),
+                    <div class="point">
+                        <label>
+                            <h4>Voltage</h4>
+                            <select class="battery_voltage" name="battery_volt"
+                                onchange="document.calculator.battery_en.value = eval(document.calculator.battery_volt.value * document.calculator.battery_cap.value / 1000),
                         document.calculator.carger_curr.value = eval((document.calculator.charge_rate.value * document.calculator.battery_cap.value).toFixed(2))">
-                            <option value="24">24</option>
-                            <option selected value="36">36</option>
-                            <option value="48">48</option>
-                            <option value="80">80</option>
-                        </select>
-                        <span>V</span>
-                    </label>
+                                <option selected value="24">24</option>
+                                <option value="36">36</option>
+                                <option value="48">48</option>
+                                <option value="80">80</option>
+                            </select>
+                            <span>V</span>
+                        </label>
 
-                    <label>
-                        <h4>Capacity</h4>
-                        <select class="battery_capacity" name="battery_cap"
-                            onchange="document.calculator.battery_en.value = eval(document.calculator.battery_volt.value * document.calculator.battery_cap.value / 1000),
+                        <label>
+                            <h4>Capacity</h4>
+                            <select class="battery_capacity" name="battery_cap"
+                                onchange="document.calculator.battery_en.value = eval(document.calculator.battery_volt.value * document.calculator.battery_cap.value / 1000),
                         document.calculator.carger_curr.value = eval((document.calculator.charge_rate.value * document.calculator.battery_cap.value).toFixed(2))">
-                            <option value="206">206</option>
-                            <option selected value="412">412</option>
-                            <option value="554">554</option>
-                            <option value="618">618</option>
-                        </select>
-                        <span>Ah</span>
-                    </label>
+                                <option selected value="206">206</option>
+                                <option value="412">412</option>
+                                <option value="554">554</option>
+                                <option value="618">618</option>
+                            </select>
+                            <span>Ah</span>
+                        </label>
 
-                    <label>
-                        <h4>Energy</h4>
-                        <input name="battery_en" class="power_batt" type="text" value="4.95" disabled>
-                        <span>kWh</span>
-                    </label>
-                </div>
-
-                <div class="truck_stat">
-                    <h3>Truck</h3>
-                    <label>
-                        <h4>Power consumption</h4>
-                        <input class="power_truck" type="text" value="2.2">
-                        <span>kWh/h</span>
-                    </label>
-                </div>
-
-                <div class="charge_stat">
+                        <label>
+                            <h4>Energy</h4>
+                            <input name="battery_en" class="power_batt" type="text" value="4.95" disabled>
+                            <span>kWh</span>
+                        </label>
+                    </div>
                     <h3>Charger</h3>
-                    <label>
-                        <h4>Charge rate</h4>
-                        <select name="charge_rate"
-                            onchange="document.calculator.carger_curr.value = eval((document.calculator.charge_rate.value * document.calculator.battery_cap.value).toFixed(2))">
-                            <option value="0.1">0.1</option>
-                            <option value="0.2">0.2</option>
-                            <option selected value="0.5">0.5</option>
-                            <option value="1">1</option>
-                        </select>
-                        <span>C</span>
-                    </label>
-                    <label>
-                        <h4>Charge current</h4>
-                        <input name="carger_curr" class="charge_current" type="text" value="20.6" disabled>
-                        <span>A</span>
-                    </label>
+                    <div class="point">
+                        <label>
+                            <h4>Charge rate</h4>
+                            <select name="charge_rate"
+                                onchange="document.calculator.carger_curr.value = eval((document.calculator.charge_rate.value * document.calculator.battery_cap.value).toFixed(2))">
+                                <option selected value="0.1">0.1</option>
+                                <option value="0.2">0.2</option>
+                                <option value="0.5">0.5</option>
+                                <option value="1">1</option>
+                            </select>
+                            <span>C</span>
+                        </label>
+                        <label>
+                            <h4>Charge current</h4>
+                            <input name="carger_curr" class="charge_current" type="text" value="20.6" disabled>
+                            <span>A</span>
+                        </label>
+                    </div>
+                    <h3>Truck</h3>
+                    <div class="point last_label">
+                        <label >
+                            <h4>Power consumption</h4>
+                            <input class="power_truck" type="text" value="0.5">
+                            <span>kWh/h</span>
+                        </label>
+                    </div>
                 </div>
 
                 <div class="stop_time">
@@ -124,12 +103,32 @@
                     </div>
                     <div class="stash block_column"></div>
                 </div>
-                <span class="equel">Calculate</span>
+
+                <div class="result">
+                    <h3>Statistic</h3>
+                    <h4>Max SOC:<span class="max_soc">100%</span></h4>
+                    <h4>Min SOC:<span class="min_soc">10%</span></h4>
+                    <h4>Working:<span class="working">24h</span></h4>
+                    <h4>Charging:<span class="charging">24h</span></h4>
+                    <div class="equel">Calculate</div>
+                </div>
             </form>
         </div>
+        <div class="container__plot">
+
+            <div class="plot_day">
+                <div class="containerPlot">
+                <canvas id="myChart" width="950" height="320"></canvas>
+            </div>
+
+            </div>
+            <div class="plot_trande">
+                <canvas id="myChart_week" width="670" height="240"></canvas>
+            </div>
+        </div>
+
     </div>
     <script src="js/script.js"></script>
 </body>
-<!-- https://realadmin.ru/coding/jquery-hint.html -->
 
 </html>
