--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
-    <script src="js/chart.min.js"></script>
+    <!-- <script src="js/chart.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script> -->
+
     <title>Document</title>
 </head>
 
@@ -117,8 +119,8 @@
         <div class="container__plot">
 
             <div class="plot_day">
-                <div class="containerPlot">
-                <canvas id="myChart" width="950" height="320"></canvas>
+                <div class="containerPlot" id="chart">  
+                <!-- <canvas id="chart" width="950" height="320"></canvas> -->
             </div>
 
             </div>
@@ -128,7 +130,10 @@
         </div>
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
     <script src="js/script.js"></script>
+
 </body>
 
 </html>
