--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                             <h3>Charger</h3>
                             <div class="point">
                                 <label>
-                                    <h4>Charge rate</h4>
+                                    <h4>Rate</h4>
                                     <select name="charge_rate" class="charge_rate">
                                         <option value="0.1">0.1</option>
                                         <option value="0.2">0.2</option>
@@ -61,7 +61,7 @@
                                     <span>C</span>
                                 </label>
                                 <label>
-                                    <h4>Charge current</h4>
+                                    <h4>Current</h4>
                                     <span class="charge_current">103.0 A</span>
                                 </label>
                             </div>
@@ -70,8 +70,8 @@
                             <h3>Truck</h3>
                             <div class="point">
                                 <label>
-                                    <h4>Power consumption</h4>
-                                    <input class="power_truck" pattern="\d [0-9]{,3}" type="text" value="0.2">
+                                    <h4>Consumption</h4>
+                                    <input class="power_truck" value="0.2">
                                     <span>kWh/h</span>
                                 </label>
                             </div>
@@ -112,7 +112,7 @@
         </div>
         <div class="container__plot">
             <div class="result">
-                <h3>Statistic</h3>
+                <!-- <h3>Statistic</h3> -->
                 <div class="res_tick">Max SOC:<span class="max_soc">100%</span></div>
                 <div class="res_tick">Min SOC:<span class="min_soc">31%</span></div>
                 <div class="res_tick">Working:<span class="working">154.0h</span></div>
