--- a/src/index.html
+++ b/src/index.html
@@ -113,10 +113,12 @@
         <div class="container__plot">
             <div class="result">
                 <!-- <h3>Statistic</h3> -->
-                <div class="res_tick">Max SOC:<span class="max_soc">100%</span></div>
-                <div class="res_tick">Min SOC:<span class="min_soc">31%</span></div>
-                <div class="res_tick">Working:<span class="working">154.0h</span></div>
-                <div class="res_tick">Charging:<span class="charging">12.1h</span></div>
+                <div class="res_tick">Max SOC:<span class="max_soc"></span></div>
+                <div class="res_tick">Min SOC:<span class="min_soc"></span></div>
+                <div class="res_tick">Working:<span class="working"></span></div>
+                <div class="res_tick">Charging:<span class="charging"></span></div>
+                <div class="res_tick">Waiting:<span class="waiting"></span></div>
+
             </div>
             <div class="plot_day">
                 <div class="containerPlot" id="chart"></div>
