--- a/src/index.html
+++ b/src/index.html
@@ -99,10 +99,10 @@
                     </div>
 
                     <div class="stash block_column">
-                        <div class="post s0"><span class="time_step" id="p0">Start: 12:00 Stop: 13:00</span>
+                        <div class="post s0"><span class="time_step" id="p0">12:00 | 13:00</span>
                             <span class="del" id="d0">&#215;</span>
                         </div>
-                        <div class="post s1"><span class="time_step" id="p1">Start: 18:00 Stop: 19:00</span>
+                        <div class="post s1"><span class="time_step" id="p1">18:00 | 19:00</span>
                             <span class="del" id="d1">&#215;</span>
                         </div>
                     </div>
@@ -113,11 +113,11 @@
         <div class="container__plot">
             <div class="result">
                 <!-- <h3>Statistic</h3> -->
-                <div class="res_tick">Max SOC:<span class="max_soc"></span></div>
-                <div class="res_tick">Min SOC:<span class="min_soc"></span></div>
-                <div class="res_tick">Working:<span class="working"></span></div>
-                <div class="res_tick">Charging:<span class="charging"></span></div>
-                <div class="res_tick">Waiting:<span class="waiting"></span></div>
+                <div class="res_tick">Max SOC<span class="max_soc"></span></div>
+                <div class="res_tick">Min SOC<span class="min_soc"></span></div>
+                <div class="res_tick">Working<span class="working"></span></div>
+                <div class="res_tick">Charging<span class="charging"></span></div>
+                <div class="res_tick">Idle<span class="waiting"></span></div>
 
             </div>
             <div class="plot_day">
